--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "styled-components": "^1.4.4"
   },
   "devDependencies": {
     "react-scripts": "0.9.3"
