--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-geolocated": "^1.0.1",
     "react-leaflet": "^1.1.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
