--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "leaflet": "^1.0.3",
     "moment": "^2.17.1",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-geolocated": "^1.0.1",
     "react-leaflet": "^1.1.0",
